crates/tests/src/snapshots/fe_compiler_tests__compile_errors__return_lt_mixed_types.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: `<` operands must have the same type
  ┌─ fixtures/compile_errors/return_lt_mixed_types.fe:3:16
  │
3 │         return x < y
  │                ^   - this has incompatible type `u256`
  │                │    
  │                this has type `u128`


